// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emotion/babel babel css prop StringLiteral css prop value 1`] = `"<div className={css(\\"css-jf1v9l\\", [])}></div>;"`;

exports[`emotion/babel babel css prop basic 1`] = `"<div className={\\"a\\" + \\" \\" + css(\\"css-jf1v9l\\", [])}></div>;"`;

exports[`emotion/babel babel css prop basic inline 1`] = `
"<div className={\\"a\\" + \\" \\" + css(\\"css-jf1v9l\\", [], function inlineCss() {
  return [\`.css-jf1v9l { color: brown; }\`];
})}></div>;"
`;

exports[`emotion/babel babel css prop className as expression 1`] = `"<div className={variable + \\" \\" + css(\\"css-jf1v9l\\", [])}></div>;"`;

exports[`emotion/babel babel css prop className as expression string 1`] = `"<div className={\`test__class\` + \\" \\" + css(\\"css-jf1v9l\\", [])} this={\`hello\`}></div>;"`;

exports[`emotion/babel babel css prop css empty 1`] = `"<div className={css(\\"css-0\\", [])}></div>;"`;

exports[`emotion/babel babel css prop dynamic inline 1`] = `
"<div className={\\"a\\" + \\" \\" + css(\\"css-jsqoaa\\", [color], function inlineCss(x0) {
  return [\`.css-jsqoaa { color: \${x0}; }\`];
})}></div>;"
`;

exports[`emotion/babel babel css prop emptyClassName 1`] = `"<div className={\\"\\" + \\" \\" + css(\\"css-jf1v9l\\", [])}></div>;"`;

exports[`emotion/babel babel css prop no css attr 1`] = `"<div></div>;"`;

exports[`emotion/babel babel css prop noClassName 1`] = `"<div className={css(\\"css-jf1v9l\\", [])}></div>;"`;

exports[`emotion/babel babel styled component attr 1`] = `
"styled('input', ['css-14vghnb', [function getMargin(props) {
       return props.margin;
}, props => props.height * props.scale, function getWidth(props) {
       return props.width;
}, flex]]);"
`;

exports[`emotion/babel babel styled component attr kitchen sink 1`] = `
"styled('input', ['css-1lqib20', [function getMargin(props) {
        return props.margin ? props.margin : ('16' + 'px');
}, function getPadding(props) {
        return props.padding ? props.padding : ('16' + 'em');
}, function getWidth(props) {
        return props.width ? props.width : ('95' + '%');
}, function getHeight(props) {
        return props.height ? props.height : ('90' + 'vw');
}, function getDisplay(props) {
        return props.display ? props.display : ('flex' + '');
}]]);"
`;

exports[`emotion/babel babel styled component attr with default value 1`] = `
"styled('input', ['css-1luxokk', [function getMargin(props) {
        return props.margin ? props.margin : ('16' + '');
}]]);"
`;

exports[`emotion/babel babel styled component attr with value type 1`] = `
"styled('input', ['css-1luxokk', [function getMargin(props) {
        return props.margin + 'px';
}]]);"
`;

exports[`emotion/babel babel styled component attr with value type and default value 1`] = `
"styled('input', ['css-1luxokk', [function getMargin(props) {
        return props.margin ? props.margin : ('16' + 'px');
}]]);"
`;

exports[`emotion/babel babel styled component basic 1`] = `"emotion.h1\`font-size: \${fontSize}px;\`;"`;

exports[`emotion/babel babel styled component basic inline 1`] = `"emotion.h1\`font-size: \${fontSize}px;\`;"`;

exports[`emotion/babel babel styled component function call 1`] = `"emotion(MyComponent)\`font-size: \${fontSize}px;\`;"`;

exports[`emotion/babel babel styled component inline with attr 1`] = `
"styled('input', ['css-15e0f65', [function getMargin(props) {
        return props.margin ? props.margin : ('16' + 'px');
}, function getPadding(props) {
        return props.padding ? props.padding : ('16' + 'em');
}, function getFontSize(props) {
        return props.fontSize ? props.fontSize : ('2' + 'rem');
}, function getWidth(props) {
        return props.width ? props.width : ('95' + '%');
}, function getHeight(props) {
        return props.height ? props.height : ('90' + 'vw');
}, function getDisplay(props) {
        return props.display ? props.display : ('flex' + '');
}], function inlineCss(x0, x1, x2, x3, x4, x5) {
        return [\`.css-15e0f65 { margin: \${x0};
        padding: \${x1};
        font-size: \${x2};
        width: \${x3};
        height: \${x4};
        display: \${x5}; }\`];
}]);"
`;

exports[`emotion/babel babel styled component match works on multiple 1`] = `
"styled('input', ['css-1j6h68f', [function getMargin(props) {
        return props.margin ? props.margin : ('16' + 'px');
}, function getPadding(props) {
        return props.padding ? props.padding : ('16' + 'em');
}]]);"
`;
